--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -5,12 +5,7 @@
 	<span class='username'><%= link_to '@'+user.nickname, '/'+user.nickname%></span>
 </span>
 <br>
-<!-- <h1>
-	<%= link_to '@'+current_user.nickname , current_user%><br>
-	<%#= link_to '  @'+current_user.nickname+' ' , current_user  %>
-</h1>
- --><span>
-	<%#= link_to "view my profile", current_user %>
+<span>
 </span>
 <span>
 	<%#= pluralize(current_user.microposts.count, "micropost") %>
