--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -7,11 +7,11 @@
 		<h1>
 			<%= render 'shared/user_info', user: @micropost.user %>
 		</h1>
-		<h1><%= @micropost.content %></h1>
-		<span class="timestamp">Posted <%= time_ago_in_words(@micropost.created_at) %> ago.</span>
+		<h1 style='display: inline;'><%= @micropost.content %></h1>
 		<% if current_user == @micropost.user %>
-		<%= link_to "d", @micropost, method: :delete, data: { confirm: '本当に消してしまうん？' }, title: @micropost.content, class:"common_icons", style:"z-index:10" %>
+			<%= link_to "d", @micropost, method: :delete, data: { confirm: '本当に消してしまうん？' }, title: @micropost.content, class:"common_icons", style:"z-index:10" %>
 		<% end %>
+		<span class="timestamp">Posted <%= time_ago_in_words(@micropost.created_at) %> ago.</span>
 
 
 		<% if @micropost.detail? %>
