Enable to signout with footer link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 
 		<% if current_user %>
 		Welcome <%= current_user.name %>!
-		<%= link_to "Sign Out", signout_path %>
+		<%= link_to "Sign Out", signout_path, method: "delete" %>
 		<% else %>
 		<%= link_to "Sign in with Twitter", "/auth/twitter" , :class => 'signin' %>
 		<% end %>
